# arcades

./: .gitmodules  CMakeLists.txt
config/: version.hxx.in
lib/: CMakeLists.txt
lib/include/arcades/: arcades.hxx
lib/src/: arcades.cxx
src/: main.cxx
